@@ -22,10 +22,12 @@
 #include <iostream>
 #include <sstream>
 #include <stdio.h>
+#include "boost/algorithm/string/predicate.hpp"
 
 //-------------------------------
 // Collaborating Class Headers --
 //-------------------------------
+#include "MsgLogger/MsgLogger.h"
 
 //-----------------------------------------------------------------------
 // Local Macros, Typedefs, Structures, Unions and Forward Declarations --
@@ -35,6 +37,10 @@ namespace {
 
   const char sep = '-' ;
 
+  const char *logger = "XtcInput.XtcFileName";
+
+  const std::string smallDataFromFirstDot = ".smd.xtc";
+
   // convert string to integer
   unsigned _cvt ( const char* ptr, bool& stat )
   {
@@ -43,6 +49,19 @@ namespace {
     stat = ( *eptr == 0 ) and val >= 0 ;
     return unsigned(val) ;
   }
+
+  void splitOnFirstDot(const std::string &path, std::string &beforeDot, std::string &dotAndAfter) {
+    static const std::string dot(".");
+    size_t dotPos = path.find(dot);
+    if (dotPos == std::string::npos) {
+      beforeDot = std::string(path);
+      dotAndAfter = std::string();
+    } else {
+      beforeDot = std::string(path.substr(0,dotPos));
+      dotAndAfter = std::string(path.substr(dotPos));
+    }
+  }
+
 
 }
 
@@ -67,18 +86,25 @@ XtcFileName::XtcFileName ( const std::string& path )
   , m_run(0)
   , m_stream(0)
   , m_chunk(0)
+  , m_small(false)
 {
 
   std::string name = basename() ;
 
-  // remove extension
-  std::string::size_type n = name.find('.') ;
-  if ( n != std::string::npos ) name.erase ( n ) ;
+  // file name expected to be eNNN_rNNN_sNNN_chNNN.xtc or
+  // file name expected to be eNNN_rNNN_sNNN_chNNN.smd.xtc or
+  // file name expected to be eNNN_rNNN_sNNN_chNNN.xtc.inprogress or
+  // file name expected to be eNNN_rNNN_sNNN_chNNN.smd.xtc.inprogress
 
-  // file name expected to be eNNN_rNNN_sNNN_chNNN.xtc
+  std::string beforeFirstDot, firstDotAndAfter;
+  splitOnFirstDot(name, beforeFirstDot, firstDotAndAfter);
+  m_small = boost::algorithm::starts_with(firstDotAndAfter, smallDataFromFirstDot);
+
+  // remove all extensions, from leftmost dot on
+  name = beforeFirstDot;
 
   // find underscore before chunk part
-  n = name.rfind(sep) ;
+  size_t n = name.rfind(sep) ;
   if ( n == std::string::npos || (name.size()-n) < 3 || name[n+1] != 'c' ) return ;
   bool stat ;
   unsigned chunk = _cvt ( name.c_str()+n+2, stat ) ;
@@ -117,17 +143,22 @@ XtcFileName::XtcFileName ( const std::string& path )
 }
 
 // Construct from dir name, experiment id, run number, stream and chunk
-XtcFileName::XtcFileName(const std::string& dir, unsigned expNum, unsigned run, unsigned stream, unsigned chunk)
+  XtcFileName::XtcFileName(const std::string& dir, unsigned expNum, unsigned run, unsigned stream, unsigned chunk, bool small)
   : m_path()
   , m_expNum(expNum)
   , m_run(run)
   , m_stream(stream)
   , m_chunk(chunk)
+  , m_small(small)
 {
   m_path = dir;
   if (not m_path.empty() and m_path[m_path.size()-1] != '/') m_path += "/";
   char buf[64];
-  snprintf(buf, sizeof buf, "e%u-r%04u-s%02u-c%02u.xtc", expNum, run, stream, chunk);
+  if (small) {
+    snprintf(buf, sizeof buf, "e%u-r%04u-s%02u-c%02u.smd.xtc", expNum, run, stream, chunk);
+  } else {
+    snprintf(buf, sizeof buf, "e%u-r%04u-s%02u-c%02u.xtc", expNum, run, stream, chunk);
+  }
   m_path += buf;
 }
 
@@ -142,6 +173,24 @@ XtcFileName::basename() const
   if ( n != std::string::npos ) name.erase ( 0, n+1 ) ;
 
   return name ;
+}
+
+// get large base name
+std::string
+XtcFileName::largeBasename() const
+{
+  std::string name = basename();
+
+  if (not this->small()) return name;
+
+  
+  // remove .smd from first .smd.xtc
+  std::string::size_type n = name.find(smallDataFromFirstDot);
+  if ( n == std::string::npos ) {
+    MsgLog(logger, error, "largeBasename can't find " << smallDataFromFirstDot << " in small file");
+    return name;
+  }
+  return name.substr(0,n) + name.substr(n+4);
 }
 
 // get file extension, anything that appears after last '.' in file name
@@ -171,6 +220,9 @@ XtcFileName::extension() const
 bool
 XtcFileName::operator<( const XtcFileName& other ) const
 {
+  if (m_small and (not other.m_small)) return true ;
+  if (other.m_small and (not m_small)) return false ;
+
   if ( m_expNum < other.m_expNum ) return true ;
   if ( other.m_expNum < m_expNum ) return false ;
 
@@ -181,8 +233,7 @@ XtcFileName::operator<( const XtcFileName& other ) const
   if ( other.m_stream < m_stream ) return false ;
 
   if ( m_chunk < other.m_chunk ) return true ;
-  return false ;
-
+  return false;
 }
 
 std::ostream&
